# BundleValleyCo

./: README.md  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs  seed_data.rs
